--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@serverless-dna/mkdocs-mcp",
-  "version": "1.1.0-beta.1",
+  "version": "1.0.0",
   "description": "Mkdocs Documentation MCP Server",
   "main": "dist/index.js",
   "bin": {
