--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
   },
   "homepage": "https://github.com/serverless-dna/mkdocs-mcp#readme",
   "scripts": {
-    "prebuild": "rimraf dist/* && pnpm lint",
+    "prebuild": "rimraf dist/* && npm run lint",
     "build": "node esbuild.config.js",
     "postbuild": "chmod +x dist/index.js",
     "test": "jest",
     "lint": "eslint --config eslint.config.mjs",
     "test:ci": "jest --ci --coverage",
     "lint:fix": "eslint --fix --config eslint.config.mjs",
-    "postversion": "pnpm build",
+    "postversion": "npm run build",
     "release": "semantic-release",
     "release:dry-run": "semantic-release --dry-run",
-    "mcp:local": "pnpm build && npx -y @modelcontextprotocol/inspector node dist/index.js https://strandsagents.com \"search AWS Strands Agents online documentation\""
+    "dev:build": "npm run build && npx -y @modelcontextprotocol/inspector node dist/index.js https://strandsagents.com \"search AWS Strands Agents online documentation\""
   },
   "keywords": [
     "aws",
@@ -49,6 +49,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.8.0",
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.10.0",
     "@modelcontextprotocol/sdk": "^1.10.1",
     "@types/cacache": "^17.0.2",
     "@types/node": "^22.14.1",
@@ -58,8 +59,6 @@
     "lunr-languages": "^1.14.0",
     "make-fetch-happen": "^14.0.3",
     "node-html-markdown": "^1.3.0",
-    "pino": "^9.6.0",
-    "pino-pretty": "^13.0.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
   },
@@ -77,7 +76,6 @@
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "esbuild": "^0.25.4",
-    "esbuild-plugin-pino": "^2.2.2",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-import-resolver-typescript": "^4.3.3",
