Migrated from Jest to Vitest and require Node 20+
- Migrated test framework from Jest to Vitest for better Node compatibility
- Updated Node requirement from 18+ to 20+ (cheerio, undici require 20+)
- Fixed GitHub workflows to use npm instead of pnpm
- Updated CI to test on Node 20.x and 22.x (removed Node 18)
- Added vitest.setup.ts with File API polyfill for undici compatibility
- Updated tsconfig to remove jest types and include vitest.config.ts
- All 240 tests passing with 92% coverage

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -25,42 +25,24 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 10.8.0
-          
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-          
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          cache: 'npm'
             
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
         
       - name: Lint
-        run: pnpm lint
+        run: npm run lint
         
       - name: Build
-        run: pnpm build
+        run: npm run build
         
       - name: Test
-        run: pnpm test:ci
+        run: npm run test:ci
         
       - name: Test Release (Dry Run)
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
-        run: pnpm release:dry-run
+        run: npm run release:dry-run
         
       - name: Update or Create GitHub Release Draft
         env:
