--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x, 22.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -25,37 +25,19 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        
-    - name: Setup pnpm
-      uses: pnpm/action-setup@v3
-      with:
-        version: 10.8.0
-        
-    - name: Get pnpm store directory
-      id: pnpm-cache
-      shell: bash
-      run: |
-        echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-        
-    - name: Setup pnpm cache
-      uses: actions/cache@v4
-      with:
-        path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-pnpm-store-
+        cache: 'npm'
           
     - name: Install dependencies
-      run: pnpm install
+      run: npm ci
       
     - name: Lint
-      run: pnpm lint
+      run: npm run lint
       
     - name: Build
-      run: pnpm build
+      run: npm run build
       
     - name: Test
-      run: pnpm test:ci
+      run: npm run test:ci
       
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
