--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,37 +38,19 @@ jobs:
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
-          
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: 10.8.0
-          
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-          
-      - name: Setup pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          cache: 'npm'
             
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
         
       - name: Lint
-        run: pnpm lint
+        run: npm run lint
         
       - name: Build
-        run: pnpm build
+        run: npm run build
         
       - name: Test
-        run: pnpm test:ci
+        run: npm run test:ci
         
       - name: Release
         env:
@@ -76,7 +58,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ] && [ "${{ github.event.inputs.releaseType }}" != "auto" ]; then
-            pnpm release --release-as ${{ github.event.inputs.releaseType }}
+            npm run release -- --release-as ${{ github.event.inputs.releaseType }}
           else
-            pnpm release
+            npm run release
           fi
