--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "prebuild": "rimraf dist/* && npm run lint",
     "build": "node esbuild.config.js",
     "postbuild": "chmod +x dist/index.js",
-    "test": "jest",
+    "test": "vitest run",
     "lint": "eslint --config eslint.config.mjs",
-    "test:ci": "jest --ci --coverage",
+    "test:ci": "vitest run --coverage",
     "lint:fix": "eslint --fix --config eslint.config.mjs",
     "postversion": "npm run build",
     "release": "semantic-release",
@@ -48,7 +48,9 @@
   ],
   "author": "Serverless DNA",
   "license": "ISC",
-  "packageManager": "pnpm@10.8.0",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.1",
     "@types/cacache": "^17.0.2",
@@ -64,17 +66,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@jest/globals": "^29.7.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
-    "@types/jest": "^29.5.14",
     "@types/lunr": "^2.3.7",
     "@types/make-fetch-happen": "^10.0.4",
     "@types/node-fetch": "^2.6.12",
     "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
+    "@vitest/coverage-v8": "^4.0.8",
     "esbuild": "^0.25.4",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
@@ -86,11 +87,10 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "semantic-release": "^24.2.3",
-    "ts-jest": "^29.3.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
